fix(config): fix RJSF form height overflow in DynamicConfig page
#root selector in index.css accidentally selected #root in rjsf generated elements

--- a/frontend-react/src/index.css
+++ b/frontend-react/src/index.css
@@ -4,7 +4,7 @@
 
 html,
 body,
-#root {
+#app-root {
   height: 100vh;
   margin: 0;
   padding: 0;
